--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.ko
 *.obj
 *.elf
+obj/
 
 # Precompiled Headers
 *.gch
@@ -27,7 +28,7 @@
 *.i*86
 *.x86_64
 *.hex
-build/
+bin/
 
 # Debug files
 *.dSYM/
